start updated - optparsing
Signed-off-by: Peter Stanko <pstanko@redhat.com>

--- a/config/default.conf
+++ b/config/default.conf
@@ -20,4 +20,8 @@ export PATH_HAMMERDB="/opt/hammerdb"
 export PATH_HDB_BIN="${PATH_HAMMERDB}/bin"
 export PATH_HDB_TCLSH="${PATH_HDB_BIN}/tclsh8.6"
 
+export PATH_SQL_VIEW="${BASE_DIR}/scripts/sql/view"
+export PATH_SQL_POLICY="${BASE_DIR}/scripts/sql/policy"
+
+
 
