user permissions and roles autload
Signed-off-by: Peter Stanko <pstanko@redhat.com>

--- a/config/default.conf
+++ b/config/default.conf
@@ -29,6 +29,7 @@ export PATH_HDB_BIN="${PATH_HAMMERDB}/bin"
 export PATH_HDB_TCLSH="${PATH_HDB_BIN}/tclsh8.6"
 
 # Global paths
+export PATH_VALUES="${BASE_DIR}/config/values.txt"
 export PATH_SCRIPTS="${BASE_DIR}/scripts"
 export PATH_TCL="${BASE_DIR}/scripts/tcl"
 export PATH_SQL="${PATH_SCRIPTS}/sql"
