--- a/config/default.conf
+++ b/config/default.conf
@@ -22,6 +22,7 @@ export CONTAINER_NAME="pgdb"
 
 # Databse dump file location
 export DB_DUMP_FILE="/tmp/${DB_NAME}-dump.sql"
+export DB_DUMP_USER="/tmp/global-db-dump.sql"
 
 # Hammer db environment specific
 export PATH_HAMMERDB="/opt/hammerdb"
