--- a/config/default.conf
+++ b/config/default.conf
@@ -25,7 +25,7 @@ export DB_DUMP_FILE="/tmp/${DB_NAME}-dump.sql"
 export DB_DUMP_USER="/tmp/global-db-dump.sql"
 
 # Hammer db environment specific
-export PATH_HAMMERDB="/opt/hammerdb"
+export PATH_HAMMERDB="/home/gevo/HammerDB-2.22"
 export PATH_HDB_BIN="${PATH_HAMMERDB}/bin"
 export PATH_HDB_TCLSH="${PATH_HDB_BIN}/tclsh8.6"
 
