--- a/config/default.conf
+++ b/config/default.conf
@@ -38,6 +38,8 @@ export PATH_SQL="${PATH_SCRIPTS}/sql"
 export PATH_SQL_VIEW="${PATH_SQL}/view"
 export PATH_SQL_POLICY="${PATH_SQL}/policy"
 export PATH_SQL_TESTS="${PATH_SQL}/tests"
+export PATH_OUT="${BASE_DIR}/out"
+export PATH_OUT_SIMPLE="${BASE_DIR}/out/simple"
 
 
 
