--- a/config/default.conf
+++ b/config/default.conf
@@ -5,6 +5,7 @@ export PORT=5432
 # Number of Warehouses and users
 export WAREHOUSES=1
 export USERS=1
+export TOTAL_ITERATIONS=1000000
 
 # Super user credentials
 export SUPER_USER_NAME="postgres"
@@ -30,7 +31,9 @@ export PATH_HDB_BIN="${PATH_HAMMERDB}/bin"
 export PATH_HDB_TCLSH="${PATH_HDB_BIN}/tclsh8.6"
 
 # Global paths
-export PATH_VALUES="${BASE_DIR}/config/values.txt"
+export PATH_CONFIG="${BASE_DIR}/config"
+export PATH_VALUES="${PATH_CONFIG}/values.txt"
+export PATH_AUTO_CONFIG="${PATH_CONFIG}/config.xml"
 export PATH_SCRIPTS="${BASE_DIR}/scripts"
 export PATH_TCL="${BASE_DIR}/scripts/tcl"
 export PATH_SQL="${PATH_SCRIPTS}/sql"
