--- a/config/default.conf
+++ b/config/default.conf
@@ -11,6 +11,7 @@ export TOTAL_ITERATIONS=1000000
 export SUPER_USER_NAME="postgres"
 export SUPER_USER_PASS="postgres"
 export ADMIN_DB_NAME="postgres"
+export PGPASSWORD="${SUPER_USER_PASS}"
 
 # User credentials and db
 export DB_NAME="tpcc"
