Refactor to use table name as param
Signed-off-by: Peter Stanko <pstanko@redhat.com>

--- a/config/default.conf
+++ b/config/default.conf
@@ -45,6 +45,9 @@ export PATH_SQL_TESTS="${PATH_SQL}/tests"
 export PATH_OUT="${BASE_DIR}/out"
 export PATH_OUT_SIMPLE="${BASE_DIR}/out/simple"
 
+export TABLE_CUSTOMERS='customer'
+export TABLE_ORDERS='orders'
+
 
 
 
