--- a/config/default.conf
+++ b/config/default.conf
@@ -49,15 +49,10 @@ export PATH_SQL_POLICY_FOREIGN="${PATH_SQL_POLICY}/foreign"
 
 export PATH_SQL_TESTS="${PATH_SQL}/tests"
 export PATH_OUT="${BASE_DIR}/out"
-<<<<<<< HEAD
-export PATH_OUT_SIMPLE="${BASE_DIR}/out/simple"
-=======
 export PATH_OUT_SIMPLE="${BASE_DIR}/out/simple"
 
 export TABLE_CUSTOMERS='customer'
 export TABLE_ORDERS='orders'
 
-
-
-
->>>>>>> e890eb252c095e5ae2455091b8bb61182779446a
+export TABLE_CUSTOMERS='customer'
+export TABLE_ORDERS='orders'
