Clean database option
Signed-off-by: Peter Stanko <pstanko@redhat.com>

--- a/config/default.conf
+++ b/config/default.conf
@@ -12,6 +12,7 @@ export SUPER_USER_NAME="postgres"
 export SUPER_USER_PASS="postgres"
 export ADMIN_DB_NAME="postgres"
 export PGPASSWORD="${SUPER_USER_PASS}"
+export PGDATA="/var/lib/postgres/data"
 
 # User credentials and db
 export DB_NAME="tpcc"
