Added fixes according to run HammerDB

--- a/config/default.conf
+++ b/config/default.conf
@@ -35,7 +35,7 @@ export PATH_HDB_TCLSH="${PATH_HDB_BIN}/tclsh8.6"
 # Global paths
 export PATH_CONFIG="${BASE_DIR}/config"
 export PATH_VALUES="${PATH_CONFIG}/values.txt"
-export PATH_AUTO_CONFIG="${PATH_CONFIG}/config.xml"
+export PATH_AUTO_CONFIG="${PATH_HAMMERDB}/config.xml"
 export PATH_SCRIPTS="${BASE_DIR}/scripts"
 export PATH_TCL="${BASE_DIR}/scripts/tcl"
 export PATH_SQL="${PATH_SCRIPTS}/sql"
